# solana-accountsdb-plugin-postgres

./: .gitignore  Cargo.toml
src/: geyser_plugin_postgres.rs  postgres_client.rs
src/postgres_client/: postgres_client_account_index.rs  postgres_client_block_metadata.rs  postgres_client_transaction.rs
